[tool.poetry]
name = "pypants"
version = "1.1.0.dev4"
description = "CLI for working with Python packages and BUILD files in a Pants monorepo"
authors = ["Jonathan Drake <jdrake@narrativescience.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/NarrativeScience/pypants"
repository = "https://github.com/NarrativeScience/pypants"

[tool.poetry.dependencies]
python = "^3.6.1"
astor = "<1,>=0.7.1"
black = "19.3b0"
Click = ">=7.0"
cookiecutter = "1.7.0"
networkx = "<3,>=2.2"
python-slugify = "<2,>=1.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
